# Books-API

./: .gitignore  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  models.py  repository.py  secure.py  services.py
api/routes/: auth.py  books.py  health.py
books_api/: modelos.py  repositorio.py  seguranca.py  servicos.py
books_api/rotas/: autenticacao.py  livros.py  saude.py
data/: books.csv  livros.csv
scripts/: scraping.py
